--- a/package.json
+++ b/package.json
@@ -6,22 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "firebasedocker": "docker run --rm -p=9000:9000 -p=8080:8080 -p=4000:4000 -p=9099:9099  -p=8085:8085 -p=5001:5001  -p=9199:9199 --env GCP_PROJECT=<swiftpr> --env ENABLE_UI=true spine3/firebase-emulator"
   },
   "dependencies": {
+    "@google-cloud/firestore": "^7.1.0",
+    "firebase": "^10.5.2",
+    "firebase-admin": "^11.11.0",
+    "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.6"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.6",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "typescript": "^5"
   }
 }
