--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.1.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "firebase": "^10.5.2",
     "firebase-admin": "^11.11.0",
     "next": "13.5.6",
