--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "framer-motion": "^10.16.4",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-qr-code": "^2.0.12"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.6",
